[package]
name = "lox"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "lox"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.3"

[build-dependencies]
walkdir = "2"

[[bench]]
name = "my_benchmark"
harness = false
